[gd_scene load_steps=4 format=3 uid="uid://b6xtgt50mritp"]

[ext_resource type="Script" path="res://level_select.gd" id="1_01iib"]
[ext_resource type="Texture2D" uid="uid://bux0ewpnwapnl" path="res://catface.png" id="2_krfhx"]

[sub_resource type="FontVariation" id="FontVariation_juhlc"]
variation_transform = Transform2D(1, 0, 0, 3, 0, 0)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01iib")

[node name="Levels" type="Control" parent="."]
z_index = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level1" type="Control" parent="Levels"]
anchors_preset = 0

[node name="Label" type="Label" parent="Levels/Level1"]
offset_left = 224.0
offset_top = 160.0
offset_right = 536.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 47
text = "Level 1:
Treehouse"
horizontal_alignment = 1

[node name="Level2" type="Control" parent="Levels"]
visible = false
anchors_preset = 0

[node name="Label" type="Label" parent="Levels/Level2"]
offset_left = 224.0
offset_top = 160.0
offset_right = 536.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 47
text = "Level 2:
Not ready"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 752.0
offset_bottom = 752.0
color = Color(0.537255, 0.980392, 0.890196, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(376, 432)
scale = Vector2(6, 5.738)
texture = ExtResource("2_krfhx")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 552.0
offset_right = 440.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 19
text = "Play"

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 500.0
offset_right = 198.0
offset_bottom = 618.0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = SubResource("FontVariation_juhlc")
theme_override_font_sizes/font_size = 40
text = "
<"

[node name="RightButton" type="Button" parent="."]
offset_left = 570.0
offset_top = 500.0
offset_right = 618.0
offset_bottom = 618.0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = SubResource("FontVariation_juhlc")
theme_override_font_sizes/font_size = 40
text = "
>"

[node name="BackButton" type="Button" parent="."]
offset_left = 312.0
offset_top = 624.0
offset_right = 440.0
offset_bottom = 672.0
theme_override_font_sizes/font_size = 19
text = "Back"

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
